--- a/package.json
+++ b/package.json
@@ -4,158 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "ansi-align": "^3.0.0",
-    "accepts": "^1.3.7",
-    "abbrev": "^1.1.1",
-    "ansi-regex": "^5.0.0",
-    "ansi-styles": "^4.3.0",
-    "balanced-match": "^1.0.2",
-    "anymatch": "^3.1.2",
-    "array-flatten": "^1.1.1",
-    "body-parser": "^1.19.0",
-    "brace-expansion": "^1.1.11",
-    "binary-extensions": "^2.2.0",
-    "boxen": "^4.2.0",
-    "braces": "^3.0.2",
-    "camelcase": "^5.3.1",
-    "cacheable-request": "^6.1.0",
-    "bytes": "^3.1.0",
-    "clone-response": "^1.0.2",
-    "chalk": "^3.0.0",
-    "ci-info": "^2.0.0",
-    "chokidar": "^3.5.2",
-    "color-convert": "^2.0.1",
-    "cli-boxes": "^2.2.1",
-    "color-name": "^1.1.4",
-    "concat-map": "^0.0.1",
-    "content-type": "^1.0.4",
-    "content-disposition": "^0.5.3",
-    "configstore": "^5.0.1",
-    "cookie": "^0.4.0",
-    "cookie-signature": "^1.0.6",
-    "decompress-response": "^3.3.0",
-    "crypto-random-string": "^2.0.0",
-    "deep-extend": "^0.6.0",
-    "debug": "^2.6.9",
-    "defer-to-connect": "^1.1.3",
-    "destroy": "^1.0.4",
-    "ee-first": "^1.1.1",
-    "duplexer3": "^0.1.4",
-    "dot-prop": "^5.3.0",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "end-of-stream": "^1.4.4",
-    "escape-goat": "^2.1.1",
-    "etag": "^1.8.1",
     "express": "^4.17.1",
-    "fill-range": "^7.0.1",
-    "forwarded": "^0.2.0",
-    "fsevents": "^2.3.2",
-    "finalhandler": "^1.1.2",
-    "fresh": "^0.5.2",
-    "get-stream": "^4.1.0",
-    "glob-parent": "^5.1.2",
-    "global-dirs": "^2.1.0",
-    "has-yarn": "^2.1.0",
-    "got": "^9.6.0",
-    "has-flag": "^3.0.0",
-    "graceful-fs": "^4.2.8",
-    "http-errors": "^1.7.2",
-    "iconv-lite": "^0.4.24",
-    "http-cache-semantics": "^4.1.0",
-    "ini": "^1.3.7",
-    "ipaddr.js": "^1.9.1",
-    "imurmurhash": "^0.1.4",
-    "import-lazy": "^2.1.0",
-    "ignore-by-default": "^1.0.1",
-    "is-ci": "^2.0.0",
-    "inherits": "^2.0.3",
-    "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.1",
-    "is-number": "^7.0.0",
-    "is-installed-globally": "^0.3.2",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-npm": "^4.0.0",
-    "is-yarn-global": "^0.3.0",
-    "is-path-inside": "^3.0.3",
-    "is-obj": "^2.0.0",
-    "json-buffer": "^3.0.0",
     "jquery": "^3.6.0",
-    "latest-version": "^5.1.0",
-    "keyv": "^3.1.0",
-    "is-typedarray": "^1.0.0",
-    "lowercase-keys": "^1.0.1",
-    "make-dir": "^3.1.0",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mimic-response": "^1.0.1",
-    "minimatch": "^3.0.4",
-    "mime-db": "^1.49.0",
-    "mime": "^1.6.0",
-    "ms": "^2.0.0",
-    "mime-types": "^2.1.32",
-    "minimist": "^1.2.5",
-    "nopt": "^1.0.10",
-    "normalize-path": "^3.0.0",
-    "negotiator": "^0.6.2",
-    "nodemon": "^2.0.12",
-    "normalize-url": "^4.5.1",
-    "p-cancelable": "^1.1.0",
-    "once": "^1.4.0",
-    "package-json": "^6.5.0",
-    "on-finished": "^2.3.0",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^0.1.7",
-    "prepend-http": "^2.0.0",
-    "picomatch": "^2.3.0",
-    "pump": "^3.0.0",
-    "pstree.remy": "^1.1.8",
-    "pupa": "^2.1.1",
-    "proxy-addr": "^2.0.7",
-    "qs": "^6.7.0",
-    "rc": "^1.2.8",
-    "readdirp": "^3.6.0",
-    "depd": "^1.1.2",
-    "registry-auth-token": "^4.2.1",
-    "safer-buffer": "^2.1.2",
-    "safe-buffer": "^5.1.2",
-    "registry-url": "^5.1.0",
-    "semver-diff": "^3.1.1",
-    "raw-body": "^2.4.0",
-    "serve-static": "^1.14.1",
-    "semver": "^5.7.1",
-    "send": "^0.17.1",
-    "setprototypeof": "^1.1.1",
-    "signal-exit": "^3.0.3",
-    "strip-json-comments": "^2.0.1",
-    "string-width": "^4.2.2",
-    "supports-color": "^5.5.0",
-    "statuses": "^1.5.0",
-    "to-regex-range": "^5.0.1",
-    "to-readable-stream": "^1.0.0",
-    "strip-ansi": "^6.0.0",
-    "toidentifier": "^1.0.0",
-    "typedarray-to-buffer": "^3.1.5",
-    "term-size": "^2.2.1",
-    "touch": "^3.1.0",
-    "undefsafe": "^2.0.3",
-    "type-is": "^1.6.18",
-    "type-fest": "^0.8.1",
-    "url-parse-lax": "^3.0.0",
-    "unique-string": "^2.0.0",
-    "unpipe": "^1.0.0",
-    "widest-line": "^3.1.0",
-    "wrappy": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "xdg-basedir": "^4.0.0",
-    "range-parser": "^1.2.1",
-    "responselike": "^1.0.2",
-    "update-notifier": "^4.1.3",
-    "write-file-atomic": "^3.0.3"
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {},
   "scripts": {
