--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "jquery": "^3.6.0",
     "nodemon": "^2.0.12"
   },
